HHH-5210 Query Cache effective only after closing the session that created the cache
git-svn-id: https://svn.jboss.org/repos/hibernate/core/trunk@19462 1b8cb986-b30d-0410-93ca-fae66ebed9b2